--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1042,8 +1042,28 @@ Indian Act</h3>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
+<h3 id="step1">Determine if the business or self-employment income is exempt from tax</h3>
+<div id="ajax-reg-tab2">
+<p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
+
+<p>The First Nations worker must earn the business or self-employment income situated on a reserve to be exempt from tax. </p>
+<p>To determine if the income is situated on a reserve, you must apply the <a href="#ajax-factors-test" aria-controls="ajax-factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption.</p>
+
+
+</div>
+<hr>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
+  <div id="ajax-notreg">
+<p>You must deduct CPP, EI and income tax the same as regular workers. </p> 
+</div></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employee meets all conditions for the exemption, continue to <a href="#step2">Step 2 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
+</ul>
+	
+ </li>
   <li>Add steps here </li>
-<li><h3 id="tab3-step4">Withhold and report the payment on a slip</h3>
+<li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
 <div id="ajax-t4-how-self-intro">
 <p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a First Nations worker who is a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
  </div>
@@ -1105,7 +1125,7 @@ Indian Act</h3>
   <ol class="lst-stps stps-strpd">
 
   <li>   Add steps here</li>
-<li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
+<li><h3 id="tab3-step4">Withhold and report the payment on a slip</h3>
 <div id="ajax-t4-how-non-emp-intro">
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a a First Nations recipient:</p>
 </div>
@@ -1335,6 +1355,11 @@ Indian Act</h3>
 <section id="ajax-example-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Non-employment income related to employment income - Examples</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example-emp-related"></div>
+	</div></section>
+
+<section id="ajax-factors-test" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">What is the connecting factors test</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#ajax-self-connect"></div>
 	</div></section>
 
 <section id="ajax-uncommon1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Uncommon employment income - Examples where exempt</h2>
