--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -292,36 +292,22 @@
 </ul>
 <p>The above listing of connecting factors is not an exhaustive listing since there are other potential connecting factors that could apply depending on the fact situation. In addition, a connecting factor will have different relevance and weight depending upon the specific facts of each case. As a result, there is no standard test that can be used to determine if business income is situated on a reserve.</p>
 </div>
+
 <p>The following examples may help you determine if your business income is situated on a reserve, and thus exempt from tax.</p>
 
-
+<details><summary>Examples where exempt or where not exempt</summary>
+<p>All of the connecting factors have to be considered when determining whether or not business income is connected to a reserve. </p>
 <section class="alert alert-info">
-	<h4>Note </h4>
-	<p>Each of the individuals in the following examples is registered as an Indian under the Indian Act. The examples concern income tax only and do not discuss GST/HST implications. </p>
+<p>Each of the individuals in the following examples is registered as an Indian under the Indian Act. The examples concern income tax only and do not discuss GST/HST implications.</p>
 </section>
-
-
-    <section class="panel panel-default">
-  <header class="panel-heading">
-    <h3 class="panel-title">Business Income – Example 1</h3>
-  </header>
-  <div class="panel-body">
+ <div id="example-self-business"> 
+         <h4>Example 1</h4>
     <p>John lives on a reserve and operates an independent logging business as a sole proprietorship. He cuts timber on land off the reserve for a logging company that is located and sells it off the reserve. In the absence of other factors, John's income from this business is considered to be <strong>taxable</strong>, because his income-earning activities and customer is off the reserve.</p>
-  </div>
-</section>
-<section class="panel panel-default">
-  <header class="panel-heading">
-    <h3 class="panel-title">Business Income – Example 2</h3>
-  </header>
-  <div class="panel-body">
+    <h4>Example 2</h4>
+  
     <p>Delia owns a retail store on a reserve. The store sells goods to both Indian and non-Indian customers. Since Delia's business activities take place on a reserve, her income from this business is <strong>tax-exempt</strong>.</p>
-  </div>
-</section>
-<section class="panel panel-default">
-  <header class="panel-heading">
-    <h3 class="panel-title">Business Income – Example 3</h3>
-  </header>
-  <div class="panel-body">
+
+   <h4>Example 3</h4>
     <p>Peter operates a trucking business that hauls logs from cutting sites located off-reserve to logging mills located off-reserve.&nbsp; His only customer is a logging company that is not located on a reserve. Peter has a garage on a reserve where he stores his trucks and an on-reserve office where he keeps the books and records for the business.&nbsp; Peter travels 20 kms from his off-reserve home each day to pick up his truck from the on-reserve garage. He then travels to the off-reserve cutting sites. Peter spends a few hours each week doing the bookkeeping for the business at the on-reserve office.</p>
     <p>Peter’s self-employed income is considered to be <strong>taxable</strong>. The following factors are the most significant and connect the income off-reserve:</p>
     <ul>
@@ -331,13 +317,8 @@
       <li>Peter does not live on-reserve.</li>
     </ul>
     <p>The on-reserve activities are limited to providing a place to park the trucks when not in use and maintain the books and records. These factors are not significant enough to connect the business income to a reserve.</p>
-  </div>
-</section>
-<section class="panel panel-default">
-  <header class="panel-heading">
-    <h3 class="panel-title">Business Income – Example 4</h3>
-  </header>
-  <div class="panel-body">
+
+  <h4>Example 4</h4>
     <p>Ronald operates a business that clears land off-reserve for oil and gas companies. He has always lived on a reserve and is an active member of his First Nation’s community. He started and grew his business with his wife from a home office on-reserve. It is from this office that Ronald bids on contracts for new business, negotiates contracts, and completes pre-qualifying questionnaires for the potential customers in order to qualify for the bidding process. The workers are hired, trained and dispatched to off-reserve work-sites from the home office on-reserve. While the workers are at work-sites, Ronald ensures from the home office on-reserve that the workers are managed properly and that they have the equipment and supplies needed to carry out their duties. All equipment for the business is stored on-reserve when not in use and all of the books and records for the business are stored and maintained at the home office on-reserve.<br>
       This type of business has been characterized by the courts as “nomadic”, as it has a base in one area (on-reserve), while engaging in work activities in other areas (off-reserve). The courts have held that the fact that the work activities were undertaken off-reserve would not in and of itself result in the income earned being situated off-reserve. <br>
       In this scenario, Ronald’s self-employed business income is <strong>tax-exempt</strong>. The following factors are given the most weight and connect the income to a reserve:</p>
@@ -347,14 +328,8 @@
       <li>The owner not only lives on the reserve but has a strong connection to the community on the reserve and started and grew the business on the reserve.</li>
     </ul>
   </div>
-</section>
-
-
-<section class="alert alert-info">
-	<h4>Note</h4>
-	<p>All of the connecting factors have to be considered when determining whether or not business income is connected to a reserve. If you need help, call us toll free at <strong>1-800-959-5525</strong>. </p>
-</section>
-
+<p>If you need help, call the CRA at <strong>1-800-959-5525</strong>. </p>
+</details>
    
         <h3>Prorating business income and expenses</h3>
 <p>If some of your revenue-generating activities take place on a reserve and the rest off a reserve, the tax exemption under section&nbsp;87 of the Indian Act may be prorated. Part of your income will therefore be taxable, and part will be exempt from tax. In such a case, your business expenses will generally be allocated to the taxable part of your income in the same ratio, unless another allocation can be shown to be more reasonable.</p>
