--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -295,7 +295,7 @@
 
 <p>The following examples may help you determine if your business income is situated on a reserve, and thus exempt from tax.</p>
 
-<details><summary>Examples where exempt or where not exempt</summary>
+<details><summary>Examples of business income situation on a reserve or not</summary>
 <p>All of the connecting factors have to be considered when determining whether or not business income is connected to a reserve. </p>
 <section class="alert alert-info">
 <p>Each of the individuals in the following examples is registered as an Indian under the Indian Act. The examples concern income tax only and do not discuss GST/HST implications.</p>
