--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1042,13 +1042,16 @@ Indian Act</h3>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
-<h3 id="step1">Determine if the business or self-employment income is exempt from tax</h3>
+<li><h3 id="step1">Determine if the business or self-employment income is exempt from tax</h3>
 <div id="ajax-reg-tab2">
 <p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
 <p>The First Nations worker must earn the business or self-employment income situated on a reserve to be exempt from tax. </p>
-<p>To determine if the income is situated on a reserve, you must apply the <a href="#ajax-factors-test" aria-controls="ajax-factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption.</p>
+<p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption.</p>
 
+<p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
+
+<p>All of the connecting factors have to be considered when determining whether or not business income is connected to a reserve. </p>
 
 </div>
 <hr>
@@ -1060,8 +1063,8 @@ Indian Act</h3>
 </div></li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employee meets all conditions for the exemption, continue to <a href="#step2">Step 2 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
 </ul>
-	
  </li>
+
   <li>Add steps here </li>
 <li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
 <div id="ajax-t4-how-self-intro">
@@ -1357,7 +1360,7 @@ Indian Act</h3>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example-emp-related"></div>
 	</div></section>
 
-<section id="ajax-factors-test" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">What is the connecting factors test</h2>
+<section id="factors-test" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">What is the connecting factors test</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#ajax-self-connect"></div>
 	</div></section>
