--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1042,7 +1042,7 @@ Indian Act</h3>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
-<li><h3 id="step1">Determine if the business or self-employment income is exempt from tax</h3>
+<li><h3 id="tab2-step1">Determine if the business or self-employment income is exempt from tax</h3>
 <div id="ajax-reg-tab2">
 <p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
@@ -1057,13 +1057,16 @@ Indian Act</h3>
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
-  <div id="ajax-notreg">
-<p>You must deduct CPP, EI and income tax the same as regular workers. </p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the business or self-employment income <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
+  <div id="ajax-notreg2">
+<p>You must deduct CPP, EI and income tax the same as regular self-employed workers. </p> 
 </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employee meets all conditions for the exemption, continue to <a href="#step2">Step 2 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span>If the business or self-employment income meets all conditions for the exemption, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of income situated on a reserve</a>.</li>
 </ul>
  </li>
+
+<li><h3 id="tab2-step2">Determine the percentage of income situated on a reserve</h3>
+</li>
 
   <li>Add steps here </li>
 <li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
