--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -291,12 +291,14 @@
 <li>Whether your administrative, clerical, or accounting activities take place on a reserve</li>
 </ul>
 <p>The above listing of connecting factors is not an exhaustive listing since there are other potential connecting factors that could apply depending on the fact situation. In addition, a connecting factor will have different relevance and weight depending upon the specific facts of each case. As a result, there is no standard test that can be used to determine if business income is situated on a reserve.</p>
+
+<p><strong>All of the connecting factors have to be considered</strong> when determining whether or not business income is connected to a reserve. </p>
+
 </div>
 
 <p>The following examples may help you determine if your business income is situated on a reserve, and thus exempt from tax.</p>
 
 <details><summary>Examples of business income situated on a reserve</summary>
-<p>All of the connecting factors have to be considered when determining whether or not business income is connected to a reserve. </p>
 <section class="alert alert-info">
 <p>Each of the individuals in the following examples is registered as an Indian under the Indian Act. The examples concern income tax only and do not discuss GST/HST implications.</p>
 </section>
