--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1051,8 +1051,6 @@ Indian Act</h3>
 
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
-<p>All of the connecting factors have to be considered when determining whether or not business income is connected to a reserve. </p>
-
 </div>
 <hr>
 
@@ -1366,6 +1364,11 @@ Indian Act</h3>
 <section id="factors-test" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">What is the connecting factors test</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#ajax-self-connect"></div>
+	</div></section>
+
+<section id="self-connect" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Examples of business or self-employment income situated on a reserve</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#example-self-business"></div>
 	</div></section>
 
 <section id="ajax-uncommon1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Uncommon employment income - Examples where exempt</h2>
