--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1056,8 +1056,9 @@ Indian Act</h3>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the business or self-employment income <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
+<p>You can call CRA at <strong>1-800-959-8281</strong>.  </p> 
   <div id="ajax-notreg2">
-<p>You must deduct CPP, EI and income tax the same as regular self-employed workers. </p> 
+<p>You must deduct CPP, EI and income tax the same as regular self-employed workers until you receive confirmation from the CRA. </p> 
 </div></li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span>If the business or self-employment income meets all conditions for the exemption, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of income situated on a reserve</a>.</li>
 </ul>
