--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -805,7 +805,8 @@ html:lang(fr) .cnjnctn-or:before {
 <p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
 <details>
 <summary>Exemptions from paying the tax</summary>
-
+<br>
+	<p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a></p>
 <p>You may qualify for an exemption from paying the tax. To claim it, you must select the exemption on your return.</p>
 <p>If your ownership qualifies for an exemption, you <strong>do not</strong> have to pay the tax.</p>
 <p>If your ownership <strong>does not qualify</strong> for an exemption, you <strong>must</strong> pay the tax.</p>
