--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1065,10 +1065,102 @@ Indian Act</h3>
  </li>
 
 <li><h3 id="tab2-step2">Determine the percentage of income situated on a reserve</h3>
+ <div id="ajax-how-tab2-prorate">
+<p>To determine the portion of income situated on a reserve, two factors are generally taken into account:</p>
+
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">Whether an actual "income" was earned</li>
+<li class="cnjnctn-col">The extent to which the income was earned on a reserve</li>
+</ul>
+
+<h4>How to <strong>calculate the percentage</strong> of income related to self-employment earned on and off a reserve</h4>
+
+<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+
+			<li><span class="fa-stack text-success">
+                                       <span class="far fa-circle fa-stack-2x"></span>
+                                       <span class="fas fa-hashtag fa-stack-1x"></span>
+                                       </span><span class="mrgn-tp-0 text-muted h5">Total working days on a reserve (do not include vacation days, sick days and statutory holidays)  </span> 
+                                    </li>
+			 <li class="brdr-bttm">
+                                 <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
+                                 <span class="far fa-circle fa-stack-2x"></span>
+                                 <span class="fas fa-hashtag fa-stack-1x"></span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Total working days </span>
+                                 <div class="mrgn-tp-md"></div>
+                              </li>
+ 			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                    <span class="fas fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-hashtag fa-stack-1x fa-inverse"></span>
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> Result 
+                                    </span></span> </li>
+
+ 			<li class="brdr-bttm">
+                                 <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
+                                 <span class="far fa-circle fa-stack-2x"></span>
+                                 <span class="fas fa-percent fa-stack-1x"></span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 100 </span>
+                                 <div class="mrgn-tp-md"></div>
+                              </li>
+
+		
+                                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                    <span class="fas fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-percent fa-stack-1x fa-inverse"></span>
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the % of income earned on reserve (paid leave such as vacation days, sick days and statutory holidays leave is also exempt)
+                                    </span></span> </li>
+					
+                  </ul>
+
+<details><summary>Calculation example</summary>
+<p>An employer requires their status Indian employee to perform duties related to their employment both on and off reserve. The employee had a total of 220 working days in the year, 44 of which were on reserve. These days spent working on the reserve did not include either vacation or sick leave. </p>
+<p>The percentage of the status Indian employee’s duties related to employment performed on a reserve is calculated as follows:</p>
+<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+
+			<li><span class="fa-stack text-success">
+                                       <span class="far fa-circle fa-stack-2x"></span>
+                                       <span class="fas fa-hashtag fa-stack-1x"></span>
+                                       </span><span class="mrgn-tp-0 text-muted h5">44 total working days on a reserve (not including vacation days, sick days and statutory holidays)  </span> 
+                                    </li>
+			 <li class="brdr-bttm">
+                                 <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
+                                 <span class="far fa-circle fa-stack-2x"></span>
+                                 <span class="fas fa-hashtag fa-stack-1x"></span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 220 total working days </span>
+                                 <div class="mrgn-tp-md"></div>
+                              </li>
+ 			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                    <span class="fas fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-hashtag fa-stack-1x fa-inverse"></span>
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> 0.2 is the result 
+                                    </span></span> </li>
+
+ 			<li class="brdr-bttm">
+                                 <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
+                                 <span class="far fa-circle fa-stack-2x"></span>
+                                 <span class="fas fa-percent fa-stack-1x"></span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 100 </span>
+                                 <div class="mrgn-tp-md"></div>
+                              </li>
+
+		
+                                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                    <span class="fas fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-percent fa-stack-1x fa-inverse"></span>
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> 20% is the percentage of duties of employment performed on reserve (paid leave such as vacation days, sick days and statutory holidays is also exempt)
+                                    </span></span> </li>
+					
+                  </ul>
+</details>
+</div>
+
 </li>
 
-  <li>Add steps here </li>
 <li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
+<div id="ajax-how-self-intro">
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
+</div>
+<h4>Payment made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
 <div id="ajax-t4-how-self-intro">
 <p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to a First Nations worker who is a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles: </p>
  </div>
@@ -1119,7 +1211,55 @@ Indian Act</h3>
  <div data-ajax-replace="#ajax-cpp-info"></div>
 	   </div>
   </details>
+
+<h4>Payment made to other self-employed workers</h4>
+<div id="ajax-t4a-how-self-intro">
+  </div>
+ <details><summary>Income all exempt</summary> 
+   <div id="ajax-t4a-how-self-ex">
+
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small class="text-muted">(tax-exempt income)</small></li> 	 
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
+  <li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>
+ 
+</ul></li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(all income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(tax-exempt self-employment income)</small></li>
+</ul></li>
+</ul>
+ <div data-ajax-replace="#ajax-cpp-info"></div>
+	 </div>
+  </details>
+
+ <details><summary>Income partly-exempt</summary> 
+   <div id="ajax-t4a-how-self-part">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> Income tax <small class="text-muted">(<strong>only</strong> on taxable income)</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span> EI <small class="text-muted">(under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a>)</small></li>   
+ </ul></li>
+
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small class="text-muted">(<strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form CPT124)</small> </li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small class="text-muted">(<strong>only</strong> on taxable income)</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small class="text-muted">(<strong>only</strong> on the tax-exempt income of the self-employed worker)</small></li>
+</ul></li>
+</ul>
+ <div data-ajax-replace="#ajax-cpp-info"></div>
+	   </div>
+  </details>
+
  <div data-ajax-replace="#ajax-how-t4-t4a"></div>
+
 </li>
 
 </ol>
