--- a/newcomers/newcomers.html
+++ b/newcomers/newcomers.html
@@ -1,30 +1,29 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!-->
-
-<html class="no-js" dir="ltr" lang="en" dir="ltr">
-<!--<![endif]-->
-<head>
-<meta charset="utf-8">
-<title>GST/HST credit – Eligibility - Canada.ca</title>
-<meta content="width=device-width,initial-scale=1" name="viewport"/>
-
-
-	<!-- Meta data -->
-<!-- Meta data-->
-<!-- Load closure template scripts -->
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
-
-<!-- Write closure template -->
-<script type="text/javascript">
+<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]-->
+	<head>
+		<meta charset="utf-8">
+		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+		<title>Common tax terms - Learn about your taxes - Canada.ca</title>
+		<meta content="width=device-width,initial-scale=1" name="viewport">
+		<!-- Meta data -->
+		<!-- Meta data-->
+		<!-- Load closure template scripts -->
+		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
+		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
+<link href="https://cra-arc.gc.ca/wet-boew/css/custom/and-or.css" rel="stylesheet">
+		<!-- Write closure template -->
+		<script type="text/javascript">
 			document.write(wet.builder.refTop({
 			}));
 		</script>
-</head>
-
-<body vocab="http://schema.org/" typeof="WebPage" resource="#wb-webpage">
+	</head>
+	
+	
+	
+	
+	
+	<body vocab="http://schema.org/" typeof="WebPage" resource="#wb-webpage">
 
     
 
@@ -246,7 +245,7 @@ GST/HST credit – Eligibility</h1>
 	<li><span class="fas fa-check text-success fa-li"></span>A Canadian resident for income tax purposes during:   </li>
 	
 	</ul>
-		<div class="cnjnctn-type-and cnjnctn-xs">
+		<div class="cnjnctn-type-or cnjnctn-xs">
 		<div class="cnjnctn-col">
 			
 			<p>The month <strong>before</strong> the CRA makes a payment</p>
@@ -280,6 +279,11 @@ GST/HST credit – Eligibility</h1>
 <p><strong>Parents in a shared custody situation may be eligible</strong> for half of the GST/HST credit for that child. This also applies to any related provincial and territorial credit. Go to <a href="/en/revenue-agency/services/child-family-benefits/canada-child-benefit-overview/canada-child-benefit-before-you-apply.html#shared">Custody arrangements and your benefits</a> for more information.</p>
 <p>If, however, a child welfare agency is legally, physically, or financially responsible for a child, you are not generally eligible for the GST/HST credit for that child.</p>
 <p>Leaving an abusive or violent situation? Get benefit and credit payments without putting yourself, or your family, in danger. For more information, go to <a href="/en/revenue-agency/services/child-family-benefits/benefits-credits-abusive-violent-situation.html">Getting benefits and credits when in an abusive or violent situation</a>.</p>
+		
+		
+		
+		
+		
 <h2>Related information</h2>
 <ul>
 <li><a href="/en/revenue-agency/services/forms-publications/publications/rc4210.html">GST/HST credit guide</a></li>
