--- a/newcomers/newcomers.html
+++ b/newcomers/newcomers.html
@@ -245,7 +245,7 @@ GST/HST credit – Eligibility</h1>
 	<li><span class="fas fa-check text-success fa-li"></span>A Canadian resident for income tax purposes during:   </li>
 	
 	</ul>
-		<div class="cnjnctn-type-or cnjnctn-xs">
+		<div class="cnjnctn-type-and cnjnctn-xs">
 		<div class="cnjnctn-col">
 			
 			<p>The month <strong>before</strong> the CRA makes a payment</p>
@@ -259,7 +259,7 @@ GST/HST credit – Eligibility</h1>
 	
 	<p>CRA normally makes GST/HST credit payments in July, October, January, and April  </p>
 	
-	<div class="row"><div class="col-sm-8"><details class="mrgn-bttm-lg"><summary>Example – Eligibility period as a new resident</summary>
+	<div class="row"><div class="col-sm-12"><details class="mrgn-bttm-lg"><summary>Example – Eligibility period as a new resident</summary>
 	
 	<p>Marceline turned 19 years old in September and became a resident that month. She applied for the GST/HST credit when she arrived to Canada. Now in October, Marceline wants to know if she is eligible to get a payment for the month.</p>
 		
