--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -1268,9 +1268,25 @@ Indian Act</h3>
         <summary>Non-employment income</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
+<li><h3 id="tab3-step1">Determine if the non-employment income is exempt from tax</h3>
+<div id="ajax-reg-tab2">
+<p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
-  <li>   Add steps here</li>
-<li><h3 id="tab3-step4">Withhold and report the payment on a slip</h3>
+</div>
+<hr>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the non-employment income <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
+
+  <div id="ajax-notreg3">
+<p>You must deduct CPP, EI and income tax on the non-employment income, pension or superannuation, or lump-sum payments same as regular workers. </p> 
+</div></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span>If the non-employment income meets all conditions for the exemption, continue to <a href="#tab3-step2">Step 2 - </a>.</li>
+</ul>
+ </li>
+ <li><h3 id="tab3-step2">Determine the percentage of income related to non-employment on a reserve</h3>
+</li>
+<li><h3 id="tab3-step3">Withhold and report the payment on a slip</h3>
 <div id="ajax-t4-how-non-emp-intro">
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a a First Nations recipient:</p>
 </div>
