--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -332,7 +332,7 @@
                            <td>Employee situation </td>
                         </tr>
                       <tr>
-                           <td><a href="indianact.html">Payments to First Nations workers</a> <span class="label label-warning">CVB - Review of first circulation</span> <span class="wb-inv">Keywords: Indians indian indigenous </span></td>
+                           <td><a href="first-nations.html">Payments to First Nations workers</a> <span class="label label-warning">CVB - Review of first circulation</span> <span class="wb-inv">Keywords: Indians indian indigenous band </span></td>
                            <td>Employee situation </td>
                         </tr>
 
