--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -352,6 +352,7 @@
 
   <li>
 <h3 id="step3">Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</h3>
+<p>You can use the employment income guidance for common employment situations to determine if the employment income is tax-exempt or partially tax-exempt.</p>
 
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve - Guideline 2</summary>
 <h4>Exempt income situation</h4>
@@ -389,7 +390,7 @@
 <li class="cnjnctn-col">The extent to which the duty of employment was performed on a reserve</li>
 </ul>
 
-<h4>How to <strong>calculate the percentage</strong> of duties related to employment performed on and off a reserve</h4>
+<details><summary>How to <strong>calculate the percentage</strong> of duties related to employment performed on and off a reserve</summary>
 
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
 
@@ -467,6 +468,7 @@
                                     </span></span> </li>
 					
                   </ul>
+</details>
 </details>
 </div>
 <h4 id="step5">Residency situation</h4>
