--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -346,19 +346,19 @@
 <p>You can call CRA at <strong>1-800-959-8281</strong>.  </p> 
 <p> You must deduct CPP, EI and income tax the same as regular workers until you receive confirmation from the CRA. </p> 
 </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If your situation is common, continue to <a href="#step3">Step 3 - Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If your situation is common, continue to <a href="#step3">Step 3 - Use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
 </ul>
  </li>
 
   <li>
-<h3 id="step3">Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</h3>
+<h3 id="step3">Use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</h3>
 <p>You can use the employment income guidance for common employment situations to determine if the employment income is tax-exempt or partially tax-exempt.</p>
 <ol class="lst-stps-sub">
 
 <li><h4 id="step3a">Situation: Your employee lives on a reserve and you are a resident on a reserve - Guideline 2</h4>  
 <p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Employee lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
 </ul>
 
@@ -367,50 +367,13 @@
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
 <hr>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your <a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">employee lives on a reserve <span class="far fa-question-circle"></span></a> <strong>and</strong> you a resident on a reserve, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#3b">Step 3b</a></li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</a></li>
             </ul>
 
 </li>
-<li><h4 id="step3b">Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 1, 3 or 4 </h4> 
-<details><summary>Situation: Your employee performs <strong>more than 50%</strong> of their employment duties on a reserve - Guideline 3</summary>
-<h4>Exempt income situation</h4>
-<div id="ajax-income-50">
-<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
-</ul>
-</li>
-<li class="cnjnctn-col">Worker performs more than 50% of their employment duties on a reserve</li>
-</ul>
 
-<p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
-</div>
-</details>
-
-<details><summary>Situation: Your employee performs <strong>50% or less</strong> of their employment duties on a reserve - Guideline 1 (proration rule)</summary>
-<h4>Partly-exempt income</h4>
- <div id="ajax-prorate-income">
-<p>Generally, the income is partly-exempt from income tax if the employee performs 50% or less of their employment duties on a reserve. </p>
-<p>The exemption is prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
-</ul>
-
-<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
- </div>
-
-</details>
-
-<details><summary>You are an <strong>Indian band or organization</strong> and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves - Guideline 4</summary>
-<h3>Exempt income situation</h3>
-<div id="ajax-income-indianband">
+<li><h4 id="step3b">Situation: You are Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves - Guideline 4</h4>  
 <p>Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
@@ -426,11 +389,53 @@
 
 <p> <a href="#ajax-example4a" aria-controls="ajax-example4a" class="overlay-lnk" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example4b" aria-controls="ajax-example4b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
-</div>
 
-</details> 
+<hr>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee meets all conditions of an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> meet all conditions or the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Situation: Employee lives on a reserve or you are a resident on a reserve</a></li>
+            </ul>
+
 </li>
-<li><h4 id="step3c">Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve - Guideline 1 </h4> 
+
+<li><h4 id="step3c">Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</h4> 
+<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
+</ul>
+</li>
+<li class="cnjnctn-col">Worker performs more than 50% of their employment duties on a reserve</li>
+</ul>
+
+<p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
+
+<hr>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3d">Step 3d - Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</a>.</li>
+            </ul>
+</li>
+
+<li><h4 id="step3d">Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve - Guideline 1</h4> 
+<details><summary>Situation: Your employee performs <strong>50% or less</strong> of their employment duties on a reserve - Guideline 1 (proration rule)</summary>
+<h4>Partly-exempt income</h4>
+ <div id="ajax-prorate-income">
+<p>Generally, the income is partly-exempt from income tax if the employee performs 50% or less of their employment duties on a reserve. </p>
+<p>The exemption is prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
+</ul>
+
+<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+ </div>
+</details>
+
 <details><summary>Situation: Your employee performs <strong>at least 90%</strong> of the duties related to their employment on a reserve - Guideline 1</summary>
 <h4>Exempt income situation</h4>
 <div id="ajax-income-90">
@@ -456,14 +461,15 @@
 
 
 </details>
- 
+ <hr>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Determine the percentage of duties related to employment on a reserve</a>.</li>
+            </ul>
 </li>
 
 </ol>
-  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If XXX, continue to <a href="#step4">Step 4 - Determine the percentage of duties related to employment on a reserve</a>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If XXX, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
-            </ul>
+ 
 </li>
 
 <li>	  
