--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -303,13 +303,13 @@
 </ul>
 <p>You must also certify that information given on Form TD1-IN is correct and complete.</p>
 
-<details><summary>Situation: Non-employment income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
+<details><summary>Situation: Employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
 <div id="ajax-non-emp">
 <p>Generally, if the worker is receiving unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
 
 <p>If the employment income was partly-exempt from income tax, the exemption is prorated to the portion of the these amounts.</p>
 
-<p> <a href="#ajax-example-emp-related" aria-controls="ajax-example-emp-related" class="overlay-lnk" role="button">Example non-employment income related to employment income <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example-emp-related" aria-controls="ajax-example-emp-related" class="overlay-lnk" role="button">Example employment-related income <span class="far fa-question-circle"></span></a> </p>
 </div>
 </details>
 
@@ -334,7 +334,7 @@
   <li>
 <h3 id="step2">Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</h3>
  <div id="ajax-uncommon">
-<p>You can use the employment income guidance for common employment situations. Depending on the situation, there are other uncommon factors that result in employment income being treated differently. This means that any factors connecting the income to a reserve must be analysed based on various court decisions to determine if the exemption applies. </p>
+<p>You can use the employment income guidance for common employment situations. Depending on the situation, there are other uncommon factors that result in employment income being treated differently. This means that any factors connecting the income to a reserve must be analyzed based on various court decisions to determine if the exemption applies. </p>
 
 <p><a href="#ajax-uncommon1" aria-controls="ajax-uncommon1" class="overlay-lnk" role="button">Examples where exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-uncommon2" aria-controls="ajax-uncommon2" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
@@ -640,11 +640,11 @@
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
-<li><h3 id="tab2-step1">Determine if the business or self-employment income is exempt from tax</h3>
+<li><h3 id="tab2-step1">Determine if the self-employment income is exempt from tax</h3>
 <div id="ajax-reg-tab2">
 <p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
-<p>The First Nations worker must earn the business or self-employment income situated on a reserve to be exempt from tax. </p>
+<p>The self-employment income earned by the First Nations worker must be  situated on a reserve to be exempt from tax. </p>
 <p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption.</p>
 
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
@@ -653,12 +653,12 @@
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the business or self-employment income <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
-<p>You can call CRA at <strong>1-800-959-8281</strong>.  </p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the self-employment income <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
+<p>You can call CRA at <strong>1-800-959-8281</strong> to confirm.  </p> 
   <div id="ajax-notreg2a">
-<p>You must deduct CPP, EI and income tax the same as regular self-employed workers until you receive confirmation from the CRA. </p> 
+<p>Your remitting and reporting obligations are the same as other self-employed workers in the same industry. </p> 
 </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span>If the business or self-employment income meets all conditions for the exemption, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of income situated on a reserve</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span>If the self-employment income meets all conditions for the exemption, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of income situated on a reserve</a>.</li>
 </ul>
  </li>
 
@@ -1031,7 +1031,7 @@
 	<div data-ajax-replace="#ajax-how-prorate"></div>
 	</div></section>
 
-<section id="ajax-def1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Employer or payer is resident on a reserve</h2>
+<section id="ajax-def1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Employer is resident on a reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def1"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>	
@@ -1042,7 +1042,7 @@
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def2"></div>
 	</div></section>
 
-<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">Worker lives on the reserve</h2>
+<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">Employee lives on the reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def3"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
@@ -1109,7 +1109,7 @@
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example4b"></div>
 	</div></section>
 
-<section id="ajax-example-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Non-employment income related to employment income - Examples</h2>
+<section id="ajax-example-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Employment-related income - Examples</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#example-emp-related"></div>
 	</div></section>
